k8s/ingress.example.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: uv-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - hostname
    secretName: secretpass  # Specify the name of your TLS secret
  rules:
  - host: hostname
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: uv-service
            port:
              number: 80
