k8s/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: uv-ingress
  namespace: prod
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`uv.weatherate.com`)
      priority: 10
      services:
        - name: uv-service
          port: 80
  tls:
    certResolver: letsencrypt-prod
